<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoryAppSubmission</string>
    <string name="title_welcome_page">Welcome to Dicoding.</string>
    <string name="message_welcome_page">This application displays a list of stories from friends who are studying and graduating from Dicoding.</string>
    <string name="name_user">Username</string>
    <string name="description">Description</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="story">StoryPage</string>
    <string name="copyright">©Dicoding/Arvandha</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="mapButton">Maps</string>
    <string name="logoutButton">Logout</string>
    <string name="registerquestion">Dont have account?</string>
    <string name="loginquestion">Have Account?</string>
    <string name="title_login_page">Login Page</string>
    <string name="title_register_page">Register Page</string>
    <string name="message_login_page">Please input your account!</string>
    <string name="message_register_page">Please register your account!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="addStory">Add Story</string>
    <string name="permission">Don\'t have permission</string>
    <string name="fill_in">Fill In</string>
    <string name="choosePicture">Choose Picture</string>
    <string name="title_confirm">Logout Confirmation</string>
    <string name="confirm">Are you sure you want to exit?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location is not found. Try Again</string>
    <string name="retry">Try Again</string>
</resources>