<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="com.dicoding.storyappsubmission.ui.view.MainActivity">

    <ImageView
        android:id="@+id/settingImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="310dp"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_language_24" />

    <ImageView
        android:id="@+id/img_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/image_dicoding"/>

    <TextView
        android:id="@+id/titleTextView"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="25dp"
        android:text="@string/title_welcome_page"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/message_welcome_page"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/loginButton"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/navi"
        android:text="@string/login"/>

    <Button
        android:id="@+id/registerButton"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/navi"
        android:text="@string/register"/>

    <TextView
        android:id="@+id/copyrightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:text="@string/copyright"
        android:textSize="14sp"/>

</LinearLayout>